{
    "myTasks": "Мои дела",
    "tasksDone": "Выполнено",
    "save": "Сохранить",
    "new": "Новое",
    "doSomething": "Сделать что-то...",
    "importance": "Приоритет",
    "doItUntil": "Сделать до",
    "delete": "Удалить",
    "low": "Низкий",
    "basic": "Нет",
    "high": "!! Высокий",
    "cancel": "Отмена",
    "done": "Готово"
,    "january":"Январь",
    "february":"Февраль",
    "march":"Март",
    "april":"Апрель",
    "may":"Май",
    "june":"Июнь",
    "july":"Июль",
    "august":"Август",
    "september":"Сентябрь",
    "october":"Октябрь",
    "november":"Ноябрь",
    "december":"Декабрь",
    "monday":"Понедельник",
    "tuesday":"Вторник",
    "wednesday":"Среда",
    "thursday":"Четверг",
    "friday":"Пятнцица",
    "saturday":"Субота",
    "sunday":"Воскресенье"
}